--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,54 @@
-
-<!-- buy.handlebars -->
-<!-- Landing page - lists all items currently in the DB -->
-<div container-flex>
-    <div class="row">
-        <h1 class="mainText">Meet Me In The Alley</h1>
-    </div>
-
-
-
-
-</div>
-
-
-
-
-
+<div class="row">
+            <div class="col-4">
+            </div>
+            <div class="col-4">
+                <h1 class="mainText">Meet Me In The Alley*</h1>
+                <h5 class="subText">*Don't meet people in Alleys!</h5>
+            </div>
+            <div class="col-4">
+            </div>
+        </div>
+        <hr>
+        <br>
+        <button type="button" class="btn btn-warning">Sell Something</button>
+        <!-- <hr> -->
+        <div class="row">
+            <div class="col-3">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+            </div>
+            <div class="col-3">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+            </div>
+            <div class="col-3">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+            </div>
+            <div class="col-3">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+            </div>
+        </div>
+        <hr>
+        <footer class="page-footer font-small blue pt-4 mt-4">
+            <div class="footer-copyright py-3 text-center">
+                © 2018 Copyright: Brogrammers 
+            </div>
+        </footer>
