--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -1,9 +1,34 @@
-
-<!-- item.handlebars -->
-<!-- This page is for when a user clicks on an item they are interested in buying -->
-
-
-
-
-
-
+<div class="row">
+            <div class="col-12">
+                <h1 class="mainText">Meet Me In The Alley*</h1>
+                <h5 class="subText">*Don't meet people in Alleys!</h5>
+                <hr>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-12">
+                <h2 class="subText">Item Title</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7">
+                <p>Price goes here</p><br><br>
+                <p>Description Goes here</p><br>
+            </div>
+            <div class="col-5">
+                <p>Item Picture Goes Here</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary">Buy Item</button><br>
+            </div>
+        </div> 
+        <hr>
+        <footer class="page-footer font-small blue pt-4 mt-4">
+            <div class="footer-copyright py-3 text-center">
+                © 2018 Copyright: Brogrammers 
+            </div>
+        </footer>
