--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -1,10 +1,18 @@
+<div class="row">
+        <div class="col-12">
+            <h1 class="mainText">Meet Me In The Alley*</h1>
+            <h5 class="subText">*Don't meet people in Alleys!</h5>
+            <hr>
+        </div>
+    </div>
+    <div class="row">
 
-<!-- sell.handlebars -->
-<!-- This page contains the forms that pull user input about what they want to sell
-needs to store to the DB -->
+        <p>Need FORM inputs for: Title, Description, Price, Catergory</p>
 
 
-
-
-
-
+    </div>
+    <footer class="page-footer font-small blue pt-4 mt-4">
+        <div class="footer-copyright py-3 text-center">
+            © 2018 Copyright: Brogrammers 
+        </div>
+    </footer>
