updated handlebars pages, updated CSS

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./public/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./public/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">   
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/2.6.3/firebaseui.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
@@ -18,15 +18,15 @@
     <div class="container-fluid">  
         <div class="row">
             <div class="col-12">
-                <h1>Meet Me In The Alley*</h1>
-                <h5>*Don't meet people in Alleys!</h5>
+                <p class="mainText">Meet Me In The Alley*</p>
+                <p class="subText">*Don't meet people in Alleys!</p>>
                 <hr>
             </div>
         </div>
         {{{ body }}}
         <footer class="page-footer font-small blue pt-4 mt-4">
             <div class="footer-copyright py-3 text-center">
-                © 2018 Copyright: Brogrammers 
+                <p class="footText">© 2018 Copyright: Brogrammers</p>
             </div>
         </footer>
     </div>
