--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,34 +1,35 @@
         <div class="row">
-            <div class="col-3">
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
+            <div class="col-3 indexText">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
             </div>
-            <div class="col-3">
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
+            <div class="col-3 indexText">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
             </div>
-            <div class="col-3">
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
+            <div class="col-3 indexText">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
             </div>
-            <div class="col-3">
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
-                <p>items</p><br>
+            <div class="col-3 indexText">
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
+                <p>items</p><br><br>
             </div>
         </div>
+        <hr>
