--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -4,12 +4,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-7">
-                <p>Price goes here</p><br><br>
-                <p>Description Goes here</p><br>
+            <div class="col-7 itemCloseUp">
+                <p class="itemText">Price goes here</p><br><br>
+                <p class="itemText">Description Goes here</p><br>
             </div>
             <div class="col-5">
-                <p>Item Picture Goes Here</p>
+                <p class="itemText">Item Picture Goes Here</p>
             </div>
         </div>
         <hr>
