udpated sell.handlebars

--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -1,6 +1,18 @@
-   <div class="row">
 
-        <p>Need FORM inputs for: Title, Description, Price, Catergory</p>
-
-
+    <div class="row">
+        <form class="formLabel">
+            <label class="addTitle">Add an Item to Sell</label>
+            <br><br>
+            <p class="formText">Title</p>
+            <input type="text" name="title" size="28" class="input1">
+            <br><br>
+            <p class="formText">Description of Item</p>
+            <textarea rows="6" cols="30" name="description" form="usrform">
+            </textarea>
+            <p class="formText">Price</p>
+            <input type="text" name="price" size="7" class="input3">
+            <br><br>
+            <input type="submit" class="pushMe" style="background:darkgray;color: darkblue"> 
+        </form>  
     </div>
+    <hr>
