--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -94,3 +94,17 @@ footer {
     margin-right: 4%;
 }
 
+.bigText404 {
+    text-align: center;
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    font-size: 36px;
+    padding-top: 3%;
+}
+
+.smallText404 {
+    text-align: center;
+    font-size: 24px;
+    padding-top: 3%;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
