post route added on /sell

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -84,8 +84,8 @@
 <hr> --}}
 <ul>
     {{#each item}}
-    <div class="row">
-        <p class="{{this.Product_Id}}"></p>
+    <div class="{{this.Product_Id}}">
+        <img src="" alt="Picture">
         <p>{{this.Product_Name}}</p>
         <p>{{this.Price}}</p>
     </div>
