--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -22,7 +22,7 @@
         </select>
         <br>
         <br>
-        <input type="submit" class="pushMe" style="background:darkgray;color: darkblue">
+        <button type="submit" class="pushMe" style="background:darkgray;color: darkblue">Submit</button>
     </form>
 </div>
 <hr>
