--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,6 +16,12 @@ body {
     text-align: center;
 }
 
+.addTitle {
+    padding-bottom: 3%;
+    color: white;
+    /* text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white; */
+}
+
 .subText {
     font-size: 26px;
     color: white;
@@ -53,7 +59,6 @@ hr {
 .footText {
     color: white;
     text-align: center;
-
 }
 
 footer {
@@ -72,7 +77,7 @@ footer {
 
 .formText {
     margin-left: 6%;
-    font-size: 22px;
+    font-size: 18px;
     padding-bottom: 4px;
 }
 
@@ -112,8 +117,7 @@ footer {
 .itemsForSale {
     margin-left: 9%;
     color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-        
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
 }
 
 .price {
@@ -127,4 +131,5 @@ th, td {
 .spacer {
     margin-bottom: 50px;
 }
+
 
