--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -1,28 +1,34 @@
-<div class="row">
-    <form class="formLabel" action="/sell" method="POST" id="usrform">
-        <label class="addTitle">Add an Item to Sell</label>
-        <br>
-        <br>
-        <p class="formText">Title</p>
-        <input type="text" name="title" size="28" class="Product_Name">
-        <br>
-        <br>
-        <p class="formText">Description of Item</p>
-        <textarea type="text" rows="6" cols="30" name="description" form="usrform" class="Description"></textarea>
-        <p class="formText">Price</p>
-        <input type="text" name="price" size="7" class="Price">
-        <br>
-        <br>
-        <label for="exampleFormControlSelect1">Category</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-            <option>Clothing</option>
-            <option>Gaming</option>
-            <option>Electronics</option>
-            <option>Human</option>
-        </select>
-        <br>
-        <br>
-        <button type="submit" class="pushMe" style="background:darkgray;color: darkblue">Submit</button>
-    </form>
-</div>
-<hr>
+
+    <div class="row">
+        <form class="formLabel">
+            <label class="addTitle">Add an Item to Sell</label>
+            <br>
+            <p class="formText">Title</p>
+            <input type="text" name="title" size="27" class="input1" required="required">
+            <br>
+            <p class="formText">Description of Item</p>
+            <textarea rows="6" cols="30" name="description" form="usrform" required="required">
+            </textarea>
+            <br>
+            <p class="formText">Price</p>
+            <input type="text" name="price" size="7" class="input3" required="required">
+            <br>
+            <p class="formText">Category</p>   
+                <select class="category" required="required">
+                    <option value></option>
+                    <option value="1" style="font-size:20px;">Smartphone</option>
+                    <option value="2" style="font-size:20px;">Gaming Console</option>
+                    <option value="3" style="font-size:20px;">Laptop</option>
+                    <option value="4" style="font-size:20px;">Desktop</option>
+                    <option value="5" style="font-size:20px;">Trent</option>
+                    <option value="6" style="font-size:20px;">Other</option>
+                </select>
+            <br>
+            <p class="formText">Image</p>
+            <input type="text" name="image" size="27" class="input5" required="required">
+            <br><br>
+            <input type="submit" class="pushMe" style="background:darkgray;color: darkblue"> 
+        </form>  
+    </div>
+
+   
