Updated font size on sell.handlebars

--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -4,17 +4,17 @@
             <label class="addTitle">Add an Item to Sell</label>
             <br>
             <p class="formText">Title</p>
-            <input type="text" name="title" size="27" class="input1" required="required">
-            <br>
+            <input type="text" name="title" size="27" class="input input1" required="required">
+            <br><br>
             <p class="formText">Description of Item</p>
-            <textarea rows="6" cols="30" name="description" form="usrform" required="required">
+            <textarea rows="6" cols="30" name="description" class="input" form="usrform" required="required">
             </textarea>
             <br>
             <p class="formText">Price</p>
-            <input type="text" name="price" size="7" class="input3" required="required">
+            <input type="text" name="price" size="7" class="input input3" required="required">
             <br>
-            <p class="formText">Category</p>   
-                <select class="category" required="required">
+            <p class="input formText">Category</p>   
+                <select class=" input category" required="required">
                     <option value></option>
                     <option value="1" style="font-size:20px;">Smartphone</option>
                     <option value="2" style="font-size:20px;">Gaming Console</option>
@@ -25,7 +25,7 @@
                 </select>
             <br>
             <p class="formText">Image</p>
-            <input type="text" name="image" size="27" class="input5" required="required">
+            <input type="text" name="image" size="27" class="input input5" required="required">
             <br><br>
             <input type="submit" class="pushMe" style="background:darkgray;color: darkblue"> 
         </form>  
