Updated 'Sell' button on index.handlebars, updated buttons on sell.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <a href="/sell">
-                    <button type="button" class="btn btn-warning" style="margin-bottom:1%;color:red;margin-top:-5%;">I Want To SELL</button>
+                    <button type="button" class="btn btn-warning" style="margin-bottom:1%;margin-top:-5%;">I Want To SELL</button>
                 </a>
             </div>
             <div class="col-1"></div> 
@@ -32,3 +32,4 @@
             {{/each}}
         </div>
         <hr>
+    
