--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -27,8 +27,13 @@
             <p class="formText">Image</p>
             <input type="text" name="image" size="27" class="input input5" required="required">
             <br><br>
-            <input type="submit" class="pushMe" style="background:darkgray;color: darkblue"> 
-        </form>  
+            <a href="/">
+            <button type="button" class="btn btn-warning">Cancel</button>
+            </a>
+        
+        
+            <button type="button" type="submit" class="btn btn-success" style="margin-right:2%;">Submit</button>
+            
     </div>
 
    
