added id to submit button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,7 @@
             <input type="text" name="search">
             <br>
             <br>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="submit">
         </form>
     </div>
 </div>
