added link to products.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/2.6.3/firebaseui.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
+    <script src="../../public/assets/js/products.js"></script>
 </head>
 
 <body>
