Updated var name in index.handlebars to match what's in GET route in alley_controller.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 </div>
 <hr>
 <div class="row">
-    {{#each items}}
+    {{#each item}}
     <div class="col-2">
         <a href="/item/:{{this.Product_Id}}" style="color:white;">View This Item</a>
     </div>
