Updated var name in item.handlebars to match what's in alley_controller.js

--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -5,7 +5,7 @@
         </div>
         <div class="row">
             <div class="col-7 itemCloseUp">
-                {{items}}
+                {{item}}
                 <p class="itemTitle">{{this.Product_Name}}</p><br><br>
                 <p class="itemDescription">{{this.Description}}</p><br>
                 <p class="itemPrice">{{this.Price}}</p>
