--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -2,8 +2,6 @@
     <div class="col-12">
         <h1 class="bigText404">404 - You're In The Wrong Alley!</h1>
         <h3 class="smallText404"><a href="/">Try Me Instead</a></h3>
+        <div class="space404"></div>
     </div>
 </div>
-
-
-
