--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -1,5 +1,8 @@
 
-    <div class="row">
+    {{!-- <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            
         <form class="formLabel">
             <label class="addTitle">Add an Item to Sell</label>
             <br>
@@ -24,16 +27,53 @@
                     <option value="6" style="font-size:20px;">Other</option>
                 </select>
             <br>
-            <p class="formText">Image</p>
-            <input type="text" name="image" size="27" class="input input5" required="required">
-            <br><br>
-            <a href="/">
-            <button type="button" class="btn btn-warning">Cancel</button>
-            </a>
-        
-        
-            <button type="button" type="submit" class="btn btn-success" style="margin-right:2%;">Submit</button>
-            
-    </div>
+            <p class="formText">Image</p> --}}
 
-   
+
+    <div class="row">
+        <div class="col-12 sellTitle">
+            Sell Your Shizz
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-5"></div>
+        <div class="col-2">
+            <form class="formMe">
+            <p>Title</p>
+            <input type="text" name="title" size="27" class="input" required="required">
+            <br><br>
+            <p>Description of Item</p>
+            <textarea rows="6" cols="30" name="description" class="input" form="usrform" required="required">
+            </textarea>
+            <br>
+            <p>Price</p>
+            <input type="text" name="price" size="7" class="input" required="required">
+            <br>
+            <p>Category</p>   
+                <select class="category" required="required">
+                    <option value></option>
+                    <option value="1" style="font-size:20px;">Smartphone</option>
+                    <option value="2" style="font-size:20px;">Gaming Console</option>
+                    <option value="3" style="font-size:20px;">Laptop</option>
+                    <option value="4" style="font-size:20px;">Desktop</option>
+                    <option value="5" style="font-size:20px;">Trent</option>
+                    <option value="6" style="font-size:20px;">Other</option>
+                </select>
+            <br>
+            <p>Image</p>
+            <input type="text" name="price" size="7" class="input" required="required">
+            </form>
+        </div>
+        <div class="col-5"></div>
+    </div>
+    <div class="row">
+    <div class="col-5"></div>
+    <div class="col-2 buttonMe">
+            <a href="/">
+            <button type="button" class="btn btn-primary">Cancel</button>
+            </a>
+            <button type="button" type="submit" class="btn btn-secondary" style="margin-right:2%;">Submit</button>
+            </div>
+            <div class="col-2"></div>
+    </div>
+    <div class="col-5"></div>
