--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
                 <p>Items For Sale</p>
             </div>
             <div class="col-3"></div>
-            {{#each items}}
+            {{#each item}}
                 <div class="col-1"></div>
                 <div class="col-3 indexText">
                     <a href="/item/:{{this.Product_Id}}" style="color:white;">
